Simplified Build and added Bugs